<resources>
	<string name="app_name">SYM Labo 2</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Created by</string>
	<string name="nav_header_subtitle">Antoine Rochat, Benoît Schopfer et Jérémie Châtillon</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="compressedSend">Compressed transmission</string>
	<string name="jsonObjectSend">JSON object transmission</string>
	<string name="xmlObjectSend">XML object transmission</string>
	<string name="delayedSend">Delayed transmission</string>
	<string name="asynchronousSend">Asynchronous transmission</string>
	<string name="main">Home</string>

	<string name="asyncFragment_InputTextView">Enter the text to send to the server</string>
	<string name="asyncFragment_editText">Hello World !</string>
	<string name="asyncFragment_textButton">Send async request</string>
	<string name="asyncFragment_ResponseTitleTextView">Response from server</string>
	<string name="asyncFragment_ResponseContentTextView">No response yet.</string>

	<string name="delayedFragment_InputTextView">Enter the text to send to the server</string>
	<string name="delayedFragment_editText">Hello World !</string>
	<string name="delayedFragment_textButton">Send delayed request</string>
	<string name="delayedFragment_ResponseTitleTextView">Response from server</string>
	<string name="delayedFragment_ResponseContentTextView">No response yet.</string>

	<string name="jsonObjectFragment_objectContentTextView">Enter the content of the object to send to the server</string>
	<string name="jsonObjectFragment_computerNameEditText">Computer name</string>
	<string name="jsonObjectFragment_computerManufacturerEditText">Computer manufacturer</string>
	<string name="jsonObjectFragment_sendJsonObjectButton">Send Computer as JSON object</string>
	<string name="jsonObjectFragment_responseTitleTextView">Response from server</string>
	<string name="jsonObjectFragment_ResponseContentTextView">No response yet.</string>

	<string name="xmlObjectFragment_objectContentTextView">Enter the content of the object to send to the server</string>
	<string name="xmlObjectFragment_firstnameEditText">Firstname</string>
	<string name="xmlObjectFragment_lastnameEditText">Lastname</string>
	<string name="xmlObjectFragment_middlenameEditText">Middlename</string>
	<string name="xmlObjectFragment_phoneEditText">Phone number</string>
	<string name="xmlObjectFragment_isMaleRadioButton">Male</string>
	<string name="xmlObjectFragment_isFemaleRadioButton">Female</string>
	<string name="xmlObjectFragment_sendXmlObjectButton">Send computer as XML object</string>
	<string name="xmlObjectFragment_responseTitleTextView">Response from server</string>
	<string name="xmlObjectFragment_ResponseContentTextView">No response yet.</string>
	<string-array name="phoneTypeArray">
		<item id="0">home</item>
		<item id="1">work</item>
		<item id="2">mobile</item>
	</string-array>

	<string name="graphqlFragment_SelectAuthorTextView">Select an author</string>
	<string name="graphqlFragment_AuthorPostsTextView">Author\'s posts</string>
	<string name="graphqlObjectSend">GraphQL Object transmission</string>
	<string name="cardDescription">Description</string>
	<string name="cardDate">Date</string>
	<string name="CardTitle">Title</string>
	<string name="cardContent">Content</string>

	<string name="compressedFragment_objectContentTextView">Enter the content of the object to send to the server</string>
	<string name="compressedFragment_computerNameEditText">Computer name</string>
	<string name="compressedFragment_computerManufacturerEditText">Computer manufacturer</string>
	<string name="compressedFragment_sendJsonObjectButton">Send Computer as compressed object</string>
	<string name="compressedFragment_responseTitleTextView">Response from server</string>
	<string name="compressedFragment_ResponseContentTextView">No response yet.</string>
	<string name="ViewHolderDateText">Published the %1$s</string>
</resources>
