<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/mainSelected"
			android:icon="@drawable/ic_home"
			android:title="@string/main"/>
		<item
			android:id="@+id/asyncSend"
			android:icon="@drawable/ic_one"
			android:title="@string/asynchronousSend"/>
		<item
			android:id="@+id/delayedSend"
			android:icon="@drawable/ic_two"
			android:title="@string/delayedSend"/>
		<item
			android:id="@+id/jsonObjectSend"
			android:icon="@drawable/ic_tree"
			android:title="@string/jsonObjectSend"/>
		<item
			android:id="@+id/xmlObjectSend"
			android:icon="@drawable/ic_tree"
			android:title="@string/xmlObjectSend"/>
		<item
			android:id="@+id/graphqlObjectSend"
			android:icon="@drawable/ic_tree"
			android:title="@string/graphqlObjectSend"/>
		<item
			android:id="@+id/compressedSend"
			android:icon="@drawable/ic_four"
			android:title="@string/compressedSend"/>
	</group>

</menu>
