<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".CompressedSendFragment"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	>

	<TextView
		android:id="@+id/compressedFragmentTextView"
		android:text="@string/compressedFragment_objectContentTextView"
		android:layout_height="wrap_content"
		android:layout_width="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<EditText
		android:id="@+id/compressedFragmentComputerNameEditText"
		android:ems="10"
		android:inputType="text"
		android:text="@string/compressedFragment_computerNameEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/compressedFragmentTextView"/>

	<EditText
		android:id="@+id/compressedFragmentComputerManufacturerEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text"
		android:text="@string/compressedFragment_computerManufacturerEditText"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/compressedFragmentComputerNameEditText"
		android:layout_marginLeft="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginRight="8dp"
		app:layout_constraintRight_toRightOf="parent"/>

	<Button
		android:id="@+id/compressedFragmentSendJsonObjectButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/compressedFragment_sendJsonObjectButton"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/compressedFragmentComputerManufacturerEditText"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintEnd_toEndOf="parent"/>

	<TextView
		android:id="@+id/compressedFragmentTextView2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/compressedFragment_responseTitleTextView"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/compressedFragmentSendJsonObjectButton"/>

	<TextView
		android:id="@+id/compressedFragmentResponseFromServerTextView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:text="@string/compressedFragment_ResponseContentTextView"
		app:layout_constraintTop_toBottomOf="@+id/compressedFragmentTextView2"
		android:layout_marginLeft="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginRight="8dp"
		app:layout_constraintRight_toRightOf="parent"
		android:scrollbars="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
