<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainFragment">

	<Button
		android:id="@+id/mainFragment_AsyncButton"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="8dp"
		android:text="@string/asynchronousSend"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/mainFragment_DelayedButton"/>

	<Button
		android:id="@+id/mainFragment_DelayedButton"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/delayedSend"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainFragment_AsyncButton"
		app:layout_constraintBottom_toTopOf="@+id/mainFragment_JsonObjectButton"/>

	<Button
		android:id="@+id/mainFragment_JsonObjectButton"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/jsonObjectSend"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainFragment_DelayedButton"
		app:layout_constraintBottom_toTopOf="@+id/mainFragment_XmlObjectButton"/>

	<Button
		android:id="@+id/mainFragment_XmlObjectButton"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/xmlObjectSend"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainFragment_JsonObjectButton"
		app:layout_constraintBottom_toTopOf="@+id/mainFragment_GraphQLObjectButton"/>

	<Button
		android:id="@+id/mainFragment_GraphQLObjectButton"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/graphqlObjectSend"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainFragment_XmlObjectButton"
		app:layout_constraintBottom_toTopOf="@+id/mainFragment_CompressedButton"/>

	<Button
		android:id="@+id/mainFragment_CompressedButton"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="16dp"
		android:text="@string/compressedSend"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/mainFragment_GraphQLObjectButton"
		app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>
