<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".JsonObjectSendFragment">

	<TextView
		android:id="@+id/jsonObjectFragmentTextView"
		android:text="@string/jsonObjectFragment_objectContentTextView"
		android:layout_height="wrap_content"
		android:layout_width="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<EditText
		android:id="@+id/jsonObjectFragmentComputerNameEditText"
		android:ems="10"
		android:inputType="text"
		android:text="@string/jsonObjectFragment_computerNameEditText"
		android:hint="@string/jsonObjectFragment_computerNameEditText"
		android:labelFor="@string/jsonObjectFragment_computerNameEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/jsonObjectFragmentTextView"/>

	<EditText
		android:id="@+id/jsonObjectFragmentComputerManufacturerEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text"
		android:text="@string/jsonObjectFragment_computerManufacturerEditText"
		android:hint="@string/jsonObjectFragment_computerManufacturerEditText"
		android:labelFor="@string/jsonObjectFragment_computerManufacturerEditText"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/jsonObjectFragmentComputerNameEditText"
		android:layout_marginLeft="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginRight="8dp"
		app:layout_constraintRight_toRightOf="parent"/>

	<Button
		android:id="@+id/jsonObjectFragmentSendJsonObjectButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/jsonObjectFragment_sendJsonObjectButton"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/jsonObjectFragmentComputerManufacturerEditText"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintEnd_toEndOf="parent"/>

	<TextView
		android:id="@+id/jsonObjectFragmentTextView2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/jsonObjectFragment_responseTitleTextView"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/jsonObjectFragmentSendJsonObjectButton"/>

	<TextView
		android:id="@+id/jsonObjectFragmentResponseFromServerTextView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:text="@string/jsonObjectFragment_ResponseContentTextView"
		app:layout_constraintTop_toBottomOf="@+id/jsonObjectFragmentTextView2"
		android:layout_marginLeft="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginRight="8dp"
		app:layout_constraintRight_toRightOf="parent"
		android:scrollbars="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
