<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".XmlObjectSendFragment">

	<TextView
		android:id="@+id/xmlObjectFragmentTextView"
		android:text="@string/xmlObjectFragment_objectContentTextView"
		android:layout_height="wrap_content"
		android:layout_width="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<EditText
		android:id="@+id/xmlObjectFragmentFirstnameEditText"
		android:ems="10"
		android:inputType="textPersonName"
		android:text="@string/xmlObjectFragment_firstnameEditText"
		android:hint="@string/xmlObjectFragment_firstnameEditText"
		android:labelFor="@string/xmlObjectFragment_firstnameEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentTextView"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/xmlObjectFragmentLastnameEditText"
		/>

	<EditText
		android:id="@+id/xmlObjectFragmentLastnameEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName"
		android:text="@string/xmlObjectFragment_lastnameEditText"
		android:hint="@string/xmlObjectFragment_lastnameEditText"
		android:labelFor="@string/xmlObjectFragment_lastnameEditText"
		android:layout_marginTop="8dp"
		android:layout_marginStart="8dp"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentTextView"
		app:layout_constraintStart_toEndOf="@+id/xmlObjectFragmentFirstnameEditText"
		android:layout_marginEnd="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<EditText
		android:id="@+id/xmlObjectFragmentMiddlenameEditText"
		android:ems="10"
		android:inputType="textPersonName"
		android:text="@string/xmlObjectFragment_middlenameEditText"
		android:hint="@string/xmlObjectFragment_middlenameEditText"
		android:labelFor="@string/xmlObjectFragment_middlenameEditText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentLastnameEditText"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/xmlObjectFragmentSexRadioGroup"
		/>

	<RadioGroup
		android:id="@+id/xmlObjectFragmentSexRadioGroup"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:checkedButton="@+id/isMale"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentFirstnameEditText"
		app:layout_constraintEnd_toStartOf="@+id/xmlObjectFragmentMiddlenameEditText"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="@+id/xmlObjectFragmentMiddlenameEditText"
		>

		<RadioButton
			android:id="@+id/isMale"
			android:text="@string/xmlObjectFragment_isMaleRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			/>

		<RadioButton
			android:text="@string/xmlObjectFragment_isFemaleRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			/>
	</RadioGroup>

	<EditText
		android:id="@+id/xmlObjectFragmentPhoneEditText"
		android:layout_width="0dp"
		android:layout_height="46dp"
		android:ems="10"
		android:inputType="phone"
		android:text="@string/xmlObjectFragment_phoneEditText"
		android:hint="@string/xmlObjectFragment_phoneEditText"
		android:labelFor="@string/xmlObjectFragment_phoneEditText"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/xmlObjectFragmentPhoneTypeSpinner"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentSexRadioGroup"
		/>

	<Spinner
		android:id="@+id/xmlObjectFragmentPhoneTypeSpinner"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/xmlObjectFragmentPhoneEditText"
		app:layout_constraintBottom_toBottomOf="@+id/xmlObjectFragmentPhoneEditText"
		app:layout_constraintTop_toTopOf="@+id/xmlObjectFragmentPhoneEditText"
		/>

	<Button
		android:id="@+id/xmlObjectFragmentSendJsonObjectButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/xmlObjectFragment_sendXmlObjectButton"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentPhoneEditText"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<TextView
		android:id="@+id/xmlObjectFragmentTextView2"
		android:layout_width="0dp"
		android:layout_height="23dp"
		android:text="@string/xmlObjectFragment_responseTitleTextView"
		android:layout_marginTop="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentSendJsonObjectButton"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<TextView
		android:id="@+id/xmlObjectFragmentResponseFromServerTextView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:text="@string/waitingForResponse"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:scrollbars="vertical"
		android:layout_marginBottom="8dp"
		app:layout_constraintTop_toBottomOf="@+id/xmlObjectFragmentTextView2"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		/>

</android.support.constraint.ConstraintLayout>
