<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="5dp"
	app:cardBackgroundColor="@android:color/white"
	app:cardCornerRadius="2dp"
	app:cardElevation="2dp">

	<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/cardTitle"
			android:layout_width="match_parent"
			android:background="?android:selectableItemBackground"
			android:padding="5dp"
			tools:text="@string/CardTitle"
			android:fontFamily="sans-serif"
			android:textColor="#333"
			android:textSize="24sp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/cardDate"
			/>

		<TextView
			android:id="@+id/cardDate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:selectableItemBackground"
			android:padding="2dp"
			tools:text="@string/cardDate"
			android:fontFamily="sans-serif"
			android:textColor="#333"
			android:textSize="12sp"
			android:textStyle="italic"
			app:layout_constraintTop_toBottomOf="@+id/cardTitle"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/cardDescription"
			/>

		<TextView
			android:id="@+id/cardDescription"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:selectableItemBackground"
			android:padding="5dp"
			tools:text="@string/cardDescription"
			android:fontFamily="sans-serif"
			android:textColor="#333"
			android:textSize="12sp"
			app:layout_constraintTop_toBottomOf="@+id/cardDate"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/cardContent"/>

		<TextView
			android:id="@+id/cardContent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:selectableItemBackground"
			android:padding="5dp"
			tools:text="@string/cardContent"
			android:fontFamily="sans-serif"
			android:textColor="#333"
			android:textSize="12sp"
			app:layout_constraintTop_toBottomOf="@+id/cardDescription"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"/>
	</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
